# v-img

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
all/: CMakeLists.txt
include/: background.h  bvh.h  color_utils.h  comptime_settings.h  hit_utils.h  integrator_info.h  integrators.h  json_scene.h  progress_print.h  ray.h  simd_hit.h  texture.h  tl_camera.h  tonemapper.h
include/geometry/: emitters.h  group_emitters.h  mesh.h  quads.h  sphere.h  surface.h  triangle.h
include/material/: dielectric.h  diffuse_light.h  lambertian.h  material.h  principled.h
include/material/disney_helpers/: disney_clearcoat.h  disney_common.h  disney_diffuse.h  disney_glass.h  disney_metal.h  disney_sheen.h
include/rng/: lcg_rand.h  pcg_rand.h  sampling.h
include/scene_loading/: gltf_loading.h  json_scene.h  mitsuba_scene.h  serialized_file.h  tinyparser-mitsuba.h
include/texture/: texture_RG.h  texture_RGB.h  texture_common.h
scenes/: cornell_box_spheres.json  disney_spheres.json  empty_box.json  glass_in_box.json
scenes/MIS_light_tests/: odyssey_mis.json  odyssey_triangle_mis.json  sphere_light_medium_mis.json  sphere_light_small_mis.json
src/: bvh.cpp  image_texture.cpp  json_scene.cpp  main.cpp  main.cu  tl_camera.cpp
src/bvh/: bin_bvh.cpp  bonsai_bvh.cpp  bonzai_bvh.cpp  sweep_bvh.cpp
src/geometry/: mesh_loading.cpp  quad.cpp  sphere.cpp  triangle.cpp
src/geomtery/: quad.cpp  sphere.cpp  triangle.cpp
src/integrators/: heatmap.cpp  mat_integrator.cpp  mis_integrator.cpp  normals.cpp
src/material/: dielectric.cpp  lambertian.cpp  principled.cpp
src/rng/: lcg_rand.cpp  pcg_rand.cpp  sampling.cpp
src/scene_loading/: gltf_loading.cpp  json_scene.cpp  mitsuba_scene.cpp  serialized_file.cpp  tinyparser-mitsuba.cpp  tinyxml2.cpp
src/tonemap/: aces.cpp  agx.cpp  reinhard.cpp
